--- a/src/main.scss
+++ b/src/main.scss
@@ -1,25 +1,29 @@
 /*
  Name: Space Tourism Website
- Description: A Frontendmentor.io coding challenge.
+ Description: A Scrimba & Frontendmentor.io coding challenge.
  Author: Federico Borzani
  GitHub: https://github.com/eserengo/
 */
 
+$clr-dark: hsl(230 35% 7%);
+$clr-light: hsl(231 77% 90%);
+$clr-white: hsl(0 0% 99%);
+
+$ff-serif: "Bellefair", serif;
+$ff-sans-condensed: "Barlow Condensed", sans-serif;
+$ff-sans-normal: "Barlow", sans-serif;
+
 :root {
-  font-family: "Oswald", sans-serif;
   font-size: 16px;
-  font-weight: 400;
 }
 
-* {
+*,
+*::after,
+*::before {
   box-sizing: border-box;
   max-width: 100%;
   padding: 0%;
   margin: 0%;
   user-select: none;
-}
-
-body {
-  min-height: 100vh;
-  min-width: 200px;
+  font-weight: 400;
 }
